Fixed alignment issue in IE

--- a/packages/office-ui-fabric-react/src/components/Calendar/Calendar.scss
+++ b/packages/office-ui-fabric-react/src/components/Calendar/Calendar.scss
@@ -521,6 +521,11 @@ $Calendar-dayPicker-margin: 10px;
     .table{
       margin-right: 12px
     }
+
+     .dayPicker {
+      width: auto;
+    }
+
     .monthPicker{
       margin-left: 13px;
     }
